2016-01-30  Per Bothner  <per@bothner.com>

	* QuoteExp.java (emptyExp): New static.
	* LambdaExp.java: Use it.

2016-01-27  Per Bothner  <per@bothner.com>

	* ReferenceExp.java (apply): Fix eval when context is MouleExp.

	* ClassExp.java: Check for null - which can happen on error.
	* InlineCalls.java: Likewise.

2015-11-27  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocMethod): Slightly improved message on
	internal error.

2015-10-24  Per Bothner  <per@bothner.com>

	* Compilation.java (typeLocationProc): New static field.

2015-10-13  Per Bothner  <per@bothner.com>

	Clearer definition of "interactive mode".  Better re-definition support.
	* Compilation.java (isInteractive): New method.
	* Declaration.java (makeField): If interactive, make indirect
	regardless of whether type is specified.
	* ModuleInfo.java (oldClass): New field.
	(getOldModuleClass): New access method.
	(checkCurrent): Save moduleClass in oldClass before nulling former.
	* ProcInitializer.java (emitLoadModuleMethod): Look for old
	Procedure in both old module class as well as intercative environment.

	* Language.java (mangleName): Allow any-case letter after '-'.

2015-10-12  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Do better coercion if loading from
	indirect-binding - specifically handle primitive types.

2015-10-07  Per Bothner  <per@bothner.com>

	* AbstractScriptEngineFactory.java (BindingsLocation.get):
	Fix in the obvious way Savannah bug #45679 "Mention offending symbol
	name when throwing UnboundLocationException".

2015-10-05  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (checkCurrent): If moduleClass is null, it
	may be because it was been compiled and written - but not loaded.
	So don't automatically assume it's not current.

2015-10-04  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (setupModuleExp): Only use current value as
	literal if field is final.

2015-09-30  Per Bothner  <per@bothner.com>
